[gd_scene load_steps=5 format=3 uid="uid://dctloe3nykv0f"]

[ext_resource type="PackedScene" uid="uid://c1sx7bic4uhdj" path="res://scenes/player.tscn" id="1_7hui8"]
[ext_resource type="Script" uid="uid://c2bvlyhgf0ohx" path="res://scripts/vamp.gd" id="1_asnqg"]
[ext_resource type="PackedScene" uid="uid://c0gpy0pye4jr6" path="res://scenes/tree.tscn" id="2_asnqg"]

[sub_resource type="Curve2D" id="Curve2D_uwfch"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -39, -74, 0, 0, 0, 0, 2027.9563, -67.2776, 0, 0, 0, 0, 2022.1531, 1195.5693, 0, 0, 0, 0, -37.06556, 1191.7279, 0, 0, 0, 0, -39, -74)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
position = Vector2(-4, 1)
script = ExtResource("1_asnqg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -4.0
offset_top = 1.0
offset_right = 1925.0
offset_bottom = 1087.0

[node name="Player" parent="." instance=ExtResource("1_7hui8")]
position = Vector2(970, 535)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-1038.6783, -604.85474)
scale = Vector2(1.0338874, 1.0830444)
curve = SubResource("Curve2D_uwfch")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-39, -74)
rotation = 0.0032523053

[node name="Tree" parent="." instance=ExtResource("2_asnqg")]
position = Vector2(219, 430)

[node name="Tree2" parent="." instance=ExtResource("2_asnqg")]
position = Vector2(467, 885)

[node name="Tree3" parent="." instance=ExtResource("2_asnqg")]
position = Vector2(1302, 358)

[node name="Tree4" parent="." instance=ExtResource("2_asnqg")]
position = Vector2(1514, 826)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7019608)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "GAME OVER
press R to continue"
horizontal_alignment = 1

[node name="score" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="score"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.14722112, 0.63194615, 0.99999994, 1)
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
